deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"ahun-bff","namespace":"default"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"ahun-bff"}},"template":{"metadata":{"labels":{"app":"ahun-bff"}},"spec":{"containers":[{"image":"ghcr.io/petrolal/casa-ahun.ahun-bff:0.0.1","name":"ahun-bff","ports":[{"containerPort":8080}]}]}}}}
  creationTimestamp: "2025-07-16T18:18:54Z"
  generation: 1
  name: ahun-bff
  namespace: default
  resourceVersion: "185593"
  uid: e01abb6c-1d3d-44b6-b19b-4e0d4e93480e
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: ahun-bff
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: ahun-bff
    spec:
      containers:
      - image: ghcr.io/petrolal/casa-ahun.ahun-bff:0.0.1
        imagePullPolicy: IfNotPresent
        name: ahun-bff
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  conditions:
  - lastTransitionTime: "2025-07-16T18:18:54Z"
    lastUpdateTime: "2025-07-16T18:18:54Z"
    message: Deployment does not have minimum availability.
    reason: MinimumReplicasUnavailable
    status: "False"
    type: Available
  - lastTransitionTime: "2025-07-16T18:18:54Z"
    lastUpdateTime: "2025-07-16T18:18:54Z"
    message: ReplicaSet "ahun-bff-86f7b4fc4d" is progressing.
    reason: ReplicaSetUpdated
    status: "True"
    type: Progressing
  observedGeneration: 1
  replicas: 1
  unavailableReplicas: 1
  updatedReplicas: 1
