deployment/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: ahun-bff-service
spec:
  selector:
    app: ahun-bff-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
